<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <!-- 设置网络按钮 -->
    <ImageButton
        android:id="@+id/setnet_bt"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:background="@drawable/setting_icon_bt" />

    <ImageView
        android:id="@+id/mainView"
        android:layout_below="@id/setnet_bt"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:src="@drawable/loadreg_icon" />

    <TextView
        android:id="@+id/sellTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sell_txt"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/load_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellTxt"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/rect_bt"
        android:text="@string/load_txt"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:id="@+id/reg_bt"
        android:layout_below="@id/load_bt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/action_bt_layout"
        android:text="@string/reg_txt"
        android:textColor="@color/brown"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/changelogin_bt"
        android:layout_below="@id/reg_bt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:background="@drawable/action_bt_layout"
        android:text="@string/changelogin_txt"
        android:textColor="@color/dodgerblue"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        />

    <Button
        android:layout_below="@id/changelogin_bt"
        android:layout_alignRight="@id/changelogin_bt"
        android:id="@+id/visitorlogin_bt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:background="@drawable/action_bt_layout"
        android:text="@string/visitorlogin_txt"
        android:textColor="@color/dodgerblue"
        android:visibility="gone"
        />

</RelativeLayout>